# CITest

./: CITest.txt  CMakeLists.txt  PlaylistProcessingNodes.cpp  PlaylistProcessingNodes.h  PlaylistProcessor.cpp  PlaylistProcessor.h  PlaylistProcessorImpl.h  README.md  main.cpp  main.yml
.github/workflows/: c-cpp.yml  checker.yml  homework-tester.yml  pr-lint.yml  review-counter.yml
.gitignore/: .gitignore
DemoTest/: .gitignore
DemoTest/C-003/: .gitignore
DemoTest/C-003/src/: AddressDemo.cpp  ArrayDemo.cpp  BasicString.cpp  ConstructorDemo.cpp  CopyConstructorDemo.cpp  DestructorDemo.cpp  ExceptionDemo.cpp  ExpressionDemo.cpp  FunctionDemo.cpp  InheritanceDemo.cpp  Intro.cpp  LambdaDemo.cpp  MemoryManagement.cpp  MoveConstructor.cpp  MutablePropertyDemo.cpp  Operators.cpp  OrderConstructorDemo.cpp  OverloadOperators.cpp  PolymorphDemo.cpp  ReferenceDemo.cpp  ScopeDemo.cpp  Template.cpp  Template.h  TypeCastDemo.cpp  VariableDeclare.cpp  VisibilityInheritanceDemo.cpp  classIntro.cpp
DemoTest/Start/: .cproject  .project
DemoTest/Start/lab1/: binary.cpp  binaryTest.cpp
DemoTest/Start/lab10/: LinkedList.h  LinkedList_test.cpp
DemoTest/Start/lab2/: binaryInvert.cpp  binaryInvertTest.cpp
DemoTest/Start/lab3/: quadro.cpp  quadroTest.cpp
DemoTest/Start/lab4/: base64.cpp  base64Test.cpp  saltan.cpp  saltan.h  saltan_test.cpp
DemoTest/Start/lab5/: Complex.cpp  Complex.h  Complex_test.cpp
DemoTest/Start/lab6/: LinkedList.cpp  LinkedList.h  LinkedList_test.cpp
include/: BigShip.h  Ship.h  impl.h
src/: BigShip.cpp  impl.cpp
tmp_ignore_it/: notes.txt
(+15 files in other folders)
